--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.9'
 }
 
+dependencies {
+    compile "org.projectlombok:lombok:1.16.8"
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+}
+
 // Allow passing command line arguments to the application (using -Prunargs).
 run {
     if (project.hasProperty('runargs')) {
