--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ task wrapper(type: Wrapper) {
 dependencies {
     compile "org.projectlombok:lombok:1.16.8"
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 }
 
 // Allow passing command line arguments to the application (using -Prunargs).
